--- a/xamarinProject/xamarinProject/xamarinProject/xamarinProject.csproj
+++ b/xamarinProject/xamarinProject/xamarinProject/xamarinProject.csproj
@@ -17,6 +17,13 @@
 
   <ItemGroup>
     <EmbeddedResource Update="omOs.xaml">
+    <!-- <EmbeddedResource Update="seAnbefaletRuter.xaml"> -->
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+    <ItemGroup>
+    <!-- <EmbeddedResource Update="omOs.xaml"> -->
     <EmbeddedResource Update="seAnbefaletRuter.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
