--- a/XamarinProjectBackend/XamarinProjectBackend/appsettings.json
+++ b/XamarinProjectBackend/XamarinProjectBackend/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=christiansoe; Trusted_Connection=True; MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=christiansoe; Trusted_Connection=True; MultipleActiveResultSets=True"
     //"DefaultConnection": "Server=.; Database=InAndOut; Trusted_Connection=True; MultipleActiveResultSets=True"
   },
 
