--- a/xamarinProject/xamarinProject/xamarinProject/xamarinProject.csproj
+++ b/xamarinProject/xamarinProject/xamarinProject/xamarinProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -34,4 +34,8 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="controller\" />
+    </ItemGroup>
 </Project>
