--- a/xamarinProject/xamarinProject/xamarinProject.Android/xamarinProject.Android.csproj
+++ b/xamarinProject/xamarinProject/xamarinProject.Android/xamarinProject.Android.csproj
@@ -56,6 +56,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>5.0.0.2012</Version>
+    </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile">
       <Version>2.4.1</Version>
     </PackageReference>
