--- a/XamarinProjectBackend/XamarinProjectBackend/appsettings.json
+++ b/XamarinProjectBackend/XamarinProjectBackend/appsettings.json
@@ -1,8 +1,8 @@
 {
 
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=.\\SQLEXPRESS; Database=christiansoe; Trusted_Connection=True; MultipleActiveResultSets=True"
-    "DefaultConnection": "Server=.; Database=christiansoe; Trusted_Connection=True; MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=christiansoe; Trusted_Connection=True; MultipleActiveResultSets=True"
+    //"DefaultConnection": "Server=.; Database=christiansoe; Trusted_Connection=True; MultipleActiveResultSets=True"
   },
 
   "Logging": {
