--- a/xamarinProject/xamarinProject/xamarinProject/xamarinProject.csproj
+++ b/xamarinProject/xamarinProject/xamarinProject/xamarinProject.csproj
@@ -33,6 +33,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="controller\HistoryDesc.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="controller\OmOs.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
